
5.2a3 -> 5.2a4:
    - jbj: yarn: wire up rpmgiFini, eliminate rpmgiFree.
    - jbj: rpmtsi: use __FUNCTION__ rather than adding a 2nd arg everywhere.
    - jbj: pgpDig: fix: rpmioFreePoolItem() can return non-NULL, clear ts->dig.
    - jbj: rpmio: add --pgpdebug for pgpDig debugging.
    - jbj: yarn: wire up rpmtsiFini, eliminate rpmtsiFree.
    - jbj: yarn: wire up rpmpsmFini, eliminate rpmpsmFree.
    - jbj: yarn: wire up rpmxarFini, eliminate rpmxarFree.
    - jbj: yarn: wire up pgpDigFini, eliminate pgpDigFree.
    - jbj: yarn: wire up urlFini, eliminate XurlFree.
    - jbj: yarn: wire up fdFini, eliminate XfdFree.
    - jbj: url: fix: u->use clobbers the lock from the pool.
    - jbj: rpmds: fix: rpmdsDup needs to go through rpmdsGetPool() too.
    - jbj: yarn: move rpmioItem to <rpmiotypes.h>
    - jbj: yarn: use void * use, not yarnLock use, to hide the details.
    - jbj: yarn: wrap use/pool into a per-object "struct rpmioItem_s _item".
    - jbj: yarn: stub in (*init)() and (*fini)() pool item methods.
    - jbj: yarn: add a (*dbg)() formatter to make fdLink() generic.
    - jbj: yarn: stub-in rpmmi pool handling under NOTYET.
    - jbj: QNX: avoid conflicting db defines for __mutex_lock/__mutex_unlock.
    - jbj: yarn: convert rpmdb refcount to usage mutex.
    - jbj: yarn: convert psm refcount to usage mutex.
    - jbj: yarn: convert rpmxar refcount to usage mutex.
    - jbj: yarn: convert pgpDig refcount to usage mutex (avoid recurse deadlock).
    - jbj: yarn: convert rpmts refcount to usage mutex (avoid recurse deadlock).
    - jbj: rpmps: fix: avoid reusing items from pool for now.
    - proyvind: libcpuinfo may now return 64bit feature only if PER_LINUX_32BIT
	personality isn't set, so don't check un.machine anymore.
    - jbj: yarn: convert rpmtsi refcount to usage mutex.
    - jbj: yarn: convert rpmsx refcount to usage mutex.
    - jbj: yarn: convert rpmps refcount to usage mutex.