@@ -174,7 +174,6 @@ LIBRPM_0
     rpmfiFN;
     rpmfiFNlink;
     rpmfiFRdev;
-    rpmfiFree;
     rpmfiFreeRelocations;
     rpmfiFSize;
     rpmfiFState;
